--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 *.gz
 *.xz
 CompleteData/README.md
+*.aln
+CompleteData/AMPSphere_v.2021-03.locations.tsv
+CompleteData/AMPSphere_v.2021-03.hosts.tsv
+CompleteData/AMPSphere_v.2021-03.origin_samples.tsv
+CompleteData/AMPSphere_v.2021-03.microontology.tsv
+AMPSphereDB.sqlite
+CompleteData/AMPSphere_v.2021-03.faa
+CompleteData/AMPSphere_v.2021-03.species.tsv
+CompleteData/DRAMP_anno_AMPSphere_v.2021-03.parsed.tsv
+CompleteData/SPHERE_v.2021-03.levels_assessment.tsv
+*.nwk
