--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 
 *.gz
 *.xz
-CompleteData/README.md
+completeData/README.md
 *.aln
-CompleteData/AMPSphere_v.2021-03.locations.tsv
-CompleteData/AMPSphere_v.2021-03.hosts.tsv
-CompleteData/AMPSphere_v.2021-03.origin_samples.tsv
-CompleteData/AMPSphere_v.2021-03.microontology.tsv
-Backend/AMPSphereDB.sqlite
-CompleteData/AMPSphere_v.2021-03.faa
-CompleteData/AMPSphere_v.2021-03.species.tsv
-CompleteData/DRAMP_anno_AMPSphere_v.2021-03.parsed.tsv
-CompleteData/SPHERE_v.2021-03.levels_assessment.tsv
+completeData/AMPSphere_v.2021-03.locations.tsv
+completeData/AMPSphere_v.2021-03.hosts.tsv
+completeData/AMPSphere_v.2021-03.origin_samples.tsv
+completeData/AMPSphere_v.2021-03.microontology.tsv
+backend/AMPSphereDB.sqlite
+completeData/AMPSphere_v.2021-03.faa
+completeData/AMPSphere_v.2021-03.species.tsv
+completeData/DRAMP_anno_AMPSphere_v.2021-03.parsed.tsv
+completeData/SPHERE_v.2021-03.levels_assessment.tsv
 *.nwk
 .idea/AMPSphereWebsite.iml
 .idea/inspectionProfiles/profiles_settings.xml
