--- a/backend/config.ini
+++ b/backend/config.ini
@@ -3,4 +3,5 @@ logging_file = /root/AMPSphere/backend.log
 tmp_dir = /root/AMPSphere/tmp
 hmm_profile_file = ./database/hmmsearch_model/AMPSphere_v2021-03.hmm
 mmseqs_database_file = ./database/AMPSphere_v.2021-03.faa
+family_data_dir = ./database/family_data
 
