DEV update the sequence search api

--- a/backend/config.ini
+++ b/backend/config.ini
@@ -2,6 +2,7 @@
 logging_file = /root/AMPSphere/backend.log
 tmp_dir = /root/AMPSphere/tmp
 hmm_profile_file = ./database/hmmsearch_model/AMPSphere_v2021-03.hmm
-mmseqs_database_file = ./database/AMPSphere_v.2021-03.faa
+mmseqs_database_faa_file = ./database/AMPSphere_v.2021-03.faa
+mmseqs_database_file = ./database/mmseqsdb/AMPSphere_v.2021-03.mmseqsdb
 family_data_dir = ./database/family_data
 
