DEV restructure the repository and add unittest.

--- a/backend/config/config.ini
+++ b/backend/config/config.ini
@@ -6,3 +6,5 @@ mmseqs_database_faa_file = ./database/AMPSphere_v.2021-03.faa
 mmseqs_database_file = ./database/mmseqsdb/AMPSphere_v.2021-03.mmseqsdb
 family_data_dir = ./database/family_data
 
+hmmer_logging_file = ./log/hmmer_running.log
+mmseqs_logging_file = ./log/mmseqs_running.log
