--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,19 @@
-
+.vscode/*
 *.gz
 *.xz
-completeData/README.md
+completeData/*
 *.aln
-completeData/AMPSphere_v.2021-03.locations.tsv
-completeData/AMPSphere_v.2021-03.hosts.tsv
-completeData/AMPSphere_v.2021-03.origin_samples.tsv
-completeData/AMPSphere_v.2021-03.microontology.tsv
-backend/AMPSphereDB.sqlite
-completeData/AMPSphere_v.2021-03.faa
-completeData/AMPSphere_v.2021-03.species.tsv
-completeData/DRAMP_anno_AMPSphere_v.2021-03.parsed.tsv
-completeData/SPHERE_v.2021-03.levels_assessment.tsv
 *.nwk
-.idea/AMPSphereWebsite.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
+.idea/*
 .DS_Store
 *.pyc
 DB.sqlite
 frontend/node_modules/*
 exampleData&Scripts/*
+**/.idea/workspace.xml 
+**/.idea/tasks.xml
+*.iml
+*.xml
+*.sqlite
+*.xml
+*.iml
