DEV restructure data files

--- a/backend/config/config.ini
+++ b/backend/config/config.ini
@@ -1,10 +1,9 @@
 [DEFAULT]
-logging_file = /root/AMPSphere/backend.log
 tmp_dir = /root/AMPSphere/tmp
-hmm_profile_file = ./database/hmmsearch_model/AMPSphere_v2021-03.hmm
-mmseqs_database_faa_file = ./database/AMPSphere_v.2021-03.faa
-mmseqs_database_file = ./database/mmseqsdb/AMPSphere_v.2021-03.mmseqsdb
-family_data_dir = ./database/family_data
-
+ampsphere_main_db = ./data/ampsphere_main_db/AMPSphere_v.2021-03.sqlite
+hmmprofile_db = ./data/hmmprofile_db/AMPSphere_v2021-03.hmm
+# mmseqs_database_faa_file = ./data/ampsphere_main_db/AMPSphere_v.2021-03.faa
+mmseqs_db = ./data/mmseqs_db/AMPSphere_v.2021-03.mmseqsdb
+pre_computed_data = ./data/pre_computed
 hmmer_logging_file = ./log/hmmer_running.log
 mmseqs_logging_file = ./log/mmseqs_running.log
