BUG fix an internal error of download API

--- a/backend/config/config.ini
+++ b/backend/config/config.ini
@@ -1,4 +1,5 @@
 [DEFAULT]
+local_ip = 18.140.248.253
 tmp_dir = /root/AMPSphere/tmp
 ampsphere_main_db = ./data/ampsphere_main_db/AMPSphere_v.2021-03.sqlite
 hmmprofile_db = ./data/hmmprofile_db/AMPSphere_v2021-03.hmm
