--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 sqlalchemy~=1.4.20
 fastapi~=0.65.3
+uvloop~=0.16.0
+gunicorn~=20.1.0
+httptools~=0.2.0
 pydantic~=1.8.2
 pandas~=1.3.2
 pytest~=6.2.5
